fix vscrollbars for account list

--- a/src/renderer/App.scss
+++ b/src/renderer/App.scss
@@ -183,3 +183,7 @@ th,
     background-color: $blue-100;
   }
 }
+
+.vscroll {
+  overflow-y: auto; 
+}
